// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders properly 1`] = `
<div>
  <header
    class="jsx-2405765474"
    data-testid="header_section"
  >
    <nav
      class="jsx-2405765474 wrapper"
    >
      <a
        class="jsx-2405765474"
        data-testid="header_homepageLogoLink"
        href="/pt/homepage"
      >
        <span
          style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
        >
          <span
            style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27250%27%20height=%2735%27/%3e"
              style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
            />
          </span>
          <img
            alt="Logo"
            data-nimg="intrinsic"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
      </a>
      <ul
        class="jsx-2853090894 "
      >
        <li
          class="jsx-2853090894"
        >
          <a
            class="jsx-2853090894 fontS"
            href="/pt/about"
          >
            Sobre
          </a>
        </li>
        <li
          class="jsx-2853090894"
        >
          <a
            class="jsx-2853090894 fontS"
            href="/pt/projects"
          >
            Projetos
          </a>
        </li>
        <li
          class="jsx-2853090894"
        >
          <a
            class="jsx-2853090894 fontS active"
            href="/pt/services"
          >
            Serviços
          </a>
        </li>
        <li
          class="jsx-2853090894"
        >
          <a
            class="jsx-2853090894 fontS"
            href="/pt/contact"
          >
            Contacto
          </a>
        </li>
        <li
          class="jsx-2853090894 languageButton fontXXS"
        >
          <button
            class="jsx-2866958827"
            type="button"
          >
            pt
          </button>
        </li>
      </ul>
      <i
        aria-label="toggle menu"
        class="jsx-2079322113 menuIcon hidden"
        data-testid="menuIcon_button"
        role="button"
        tabindex="0"
      >
        <span
          class="jsx-2079322113"
        />
      </i>
    </nav>
  </header>
</div>
`;

exports[`<Header /> renders properly below phablet 1`] = `
<div>
  <header
    class="jsx-2405765474"
    data-testid="header_section"
  >
    <nav
      class="jsx-2405765474 wrapper"
    >
      <a
        class="jsx-2405765474"
        data-testid="header_homepageLogoLink"
        href="/pt/homepage"
      >
        <span
          style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
        >
          <span
            style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
          >
            <img
              alt=""
              aria-hidden="true"
              src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27150%27%20height=%2735%27/%3e"
              style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
            />
          </span>
          <img
            alt="Logo"
            data-nimg="intrinsic"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
      </a>
      <ul
        class="jsx-2853090894 mobileLayout"
      >
        <li
          class="jsx-2853090894"
        >
          <a
            class="jsx-2853090894 fontS"
            href="/pt/about"
          >
            Sobre
          </a>
        </li>
        <li
          class="jsx-2853090894"
        >
          <a
            class="jsx-2853090894 fontS"
            href="/pt/projects"
          >
            Projetos
          </a>
        </li>
        <li
          class="jsx-2853090894"
        >
          <a
            class="jsx-2853090894 fontS active"
            href="/pt/services"
          >
            Serviços
          </a>
        </li>
        <li
          class="jsx-2853090894"
        >
          <a
            class="jsx-2853090894 fontS"
            href="/pt/contact"
          >
            Contacto
          </a>
        </li>
        <li
          class="jsx-2853090894 languageButton fontXXS white fontXS"
        >
          <button
            class="jsx-2866958827"
            type="button"
          >
            pt
          </button>
        </li>
      </ul>
      <i
        aria-label="toggle menu"
        class="jsx-2079322113 menuIcon"
        data-testid="menuIcon_button"
        role="button"
        tabindex="0"
      >
        <span
          class="jsx-2079322113"
        />
      </i>
    </nav>
  </header>
</div>
`;
